--- a/views/example.html.twig
+++ b/views/example.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-    {{ parent() }} - Trainer
+    {{ parent() }} - Fail
 {% endblock %}
 {% block content %}
 
